# easyrdma

./: CMakeLists.txt
examples/: CMakeLists.txt  recv.cpp  send.cpp
